--- a/README
+++ b/README
@@ -2,4 +2,5 @@ Hi from TDS Discord
 don't check your wallet today !
 ETH to 2000$ ...
 Edit : We are fucking back
-Let's goo. 
+Let's goo
+Hyperliquid is dope
